<resources>
    <string name="app_name">Bee</string>
    <string name="sign_up_error">Đăng ký không thành công</string>
    <string name="sign_up_sucessful">Đăng ký thành công.</string>
    <string name="sign_in_error">Tài khoản hoặc mật khẩu sai.</string>
    <string name="sign_in_sucessful">Đăng nhập thành công.</string>
    <string name="im_a_driver">TÔI LÀ TÀI XẾ</string>
    <string name="im_a_customer">TÔI LÀ KHÁCH HÀNG</string>
    <string name="registration">Đăng ký</string>
    <string name="login">Đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="email">Email</string>
    <string name="title_activity_driver_map">Bản đồ Tài xế</string>
    <string name="maps_api_key">AIzaSyAFaAJ_j7LyuoGQK25zcPNd5x0YxtfmJdY</string>
    <string name="location_permission_accepted">Quyền truy cập vị trí đã được chấp nhận</string>
    <string name="location_permission_denied">Quyền truy cập vị trí bị từ chối</string>
    <string name="location_not_found">Vị trí không tìm thấy</string>
    <string name="call_bee">Gọi Bee</string>
    <string name="log_out">Đăng xuất</string>
    <string name="title_activity_vidu">Ví dụ</string>
    <string name="pickup_here">Đón tôi</string>
    <string name="looking_for_driver_location">Đang tìm tài xế gần bạn...</string>
    <string name="driver_found">Tài xế cách bạn %.2f km</string>
    <string name="driver_is_here">Tài xế đã đến</string>
    <string name="no_driver_found">Không có tài xế nào gần bạn</string>
    <string name="setting_button">Cài đặt</string>
    <string name="history_button">Lịch sử</string>
    <string name="name_setting">Tên</string>
    <string name="phone_setting">Số điện thoại</string>
    <string name="confirm_setting">Xác nhận</string>
    <string name="confirm_back">Quay lại</string>
    <string name="confirm_infor_successful">Đã lưu thông tin thành công</string>
    <string name="enter_email">Vui lòng nhập tài khoản</string>
    <string name="enter_password">Vui lòng nhập mật khẩu</string>
    <string name="enter_infor">Hãy điền thông tin vào.</string>
    <string name="car_setting">Loại xe</string>
    <string name="destination">Điểm đến</string>
    <string name="destination_not_set">Bạn chưa chọn điểm đến, hãy chọn điểm đến</string>
    <string name="set_destination">Chọn một điểm đến trên bản đồ</string>
    <string name="pickup_customer">Đón khách</string>
    <string name="end_ride">Hoàn tất</string>
    <string name="no_customer">Hiện chưa có khách</string>
    <string name="car">Ô tô</string>
    <string name="bike">Xe máy</string>
    <string name="request_fill_info">Vui lòng cung cấp đầy đủ thông tin trong phần cài đặt trước khi hoạt.</string>
    <string name="working">Bật chế độ làm việc</string>
    <string name="balance_current">Số dư tài khoản: </string>
    <string name="distance">Khoảng cách:</string>
    <string name="cost">Giá tiền:</string>
    <string name="pay_method">Phương thức thanh toán:</string>
    <string name="request_done_ride">Vui lòng kết thúc chuyến đi trước khi kết thúc</string>
</resources>
