<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".DriverLoginActivity"
    android:layout_margin="30dp"
    >

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:hint="@string/email"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="20dp"
        />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:hint="@string/password"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="20dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginBottom="5dp"
        />

    <Button
        android:id="@+id/btn_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration" />


</LinearLayout>