<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20sp"
    tools:context=".DriverSettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"

        >

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:src="@mipmap/icon_default_driver"
            android:layout_gravity="center_vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/setting_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/name_setting"
                android:minHeight="50dp"
                android:paddingHorizontal="20dp" />

            <EditText
                android:id="@+id/setting_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/phone_setting"
                android:minHeight="50dp"
                android:paddingHorizontal="20dp" />

            <EditText
                android:id="@+id/setting_car"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/car_setting"
                android:minHeight="50dp"
                android:paddingHorizontal="20dp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/xeMay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bike"
                    android:layout_marginRight="5dp"/>

                <RadioButton
                    android:id="@+id/oTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car"
                    android:layout_marginRight="5dp"/>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/setting_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:text="@string/confirm_setting" />


</LinearLayout>