<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverMapActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="10dp">

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- Nút Logout -->
            <Button
                android:id="@+id/logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/log_out" />
            <!-- Nút History -->
            <Button
                android:id="@+id/history"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/history_button" />


            <!-- Nút Settings -->
            <Button
                android:id="@+id/settings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/setting_button" />
        </LinearLayout>

        <Switch
            android:id="@+id/workingSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttons"
            android:layout_margin="10dp"
            android:text="@string/working" />

    </RelativeLayout>


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/id_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">
        <!--        android:layout_marginBottom="50dp"-->
        <LinearLayout
            android:id="@+id/cost_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_settingLayout"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/distance_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/distance" />

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance" />
            </LinearLayout>

            <!--gia tien-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/cost_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/cost" />

                <TextView
                    android:id="@+id/cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cost" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/customer_infor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_settingLayout"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:id="@+id/customer_profile_image"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:padding="5dp"
                android:src="@mipmap/icon_default_user" />

            <LinearLayout
                android:id="@+id/customer_profile_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp">

                <!--                <TextView-->
                <!--                    android:id="@+id/customer_Destination"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="50dp"-->
                <!--                    android:paddingBottom="10dp"-->
                <!--                    android:text="@string/destination" />-->

                <TextView
                    android:id="@+id/customer_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_setting"
                    android:minHeight="45dp"
                    android:paddingTop="20dp" />

                <TextView
                    android:id="@+id/customer_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_setting"
                    android:minHeight="45dp"
                    android:paddingTop="20dp" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_ride_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pickup_customer" />
    </LinearLayout>
</FrameLayout>